@@ -7,6 +7,8 @@
 -【記法】数式入力を簡単にするTeXモードの実装
 -【fix】システムメニューを辿れないことがある。
 -【fix】自動リンクを入力テキスト中で有効にしても、有効になっていなかった。
+-【fix】【Markdown】記事が見出しで始まっているとき、空の{<section>}が出力されてしまう。
+-【fix】【Markdown】GFM拡張のテーブル記法の判定条件が厳しすぎた。
 -他
 
 *Ver3.03 : 2016/02/19
